test_suite/tests/ui/fail/invalid_command_value/invalid_command_version.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_version.rs:3:1
  |
3 | #[command(version=true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `version` must be an integer, float or string literal
